Implementando a obrigatoriedade de informações

--- a/pages/loan.html
+++ b/pages/loan.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adicionar livros</title>
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/template.css">
-  <script defer src="../js/loan.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adicionar livros</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/template.css">
+    <script defer src="../js/loan.js"></script>
+  </head>
+  <body>
     <nav>
       <h1>Emprestar livros</h1>
     </nav>
@@ -37,19 +37,21 @@
         <div class="column">
           <p>Turno do aluno</p>
           <select id="student_horary">
+            <option value="" disabled selected hidden></option>
             <option value="Manhã">Manhã</option>
             <option value="Tarde">tarde</option>
             <option value="Noite">noite</option>
-
+            
           </select>
         </div>
         <div class="column">
           <p>Turno do emprestimo</p>
           <select id="loan_horary">
+            <option value="" disabled selected hidden></option>
             <option value="Manhã">Manhã</option>
             <option value="Tarde">tarde</option>
             <option value="Noite">noite</option>
-
+            
           </select>
         </div>
         <div class="column">
