--- a/pages/devolution.html
+++ b/pages/devolution.html
@@ -30,11 +30,11 @@
         <div class="row">
           <div class="column">
             <p>Registro do livro</p>
-            <input type="text" name="" id="">
+            <input type="text" name="" id="register_devolution">
           </div>
         </div>
         <div class="row">
-          <button>Devolver</button>
+          <button id="devolution">Devolver</button>
           <button id="goto_home">Voltar</button>
         </div>
 </body>
