Dark theme na pagina inicial

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/home.css">
 </head>
-<body>
+<body id="body" class="body">
   <nav>
     <h1>Biblioteca digital</h1>
   </nav>
   <div class="conteiner">
-    <button id="goto_add_book">Adicionar livros</button>
-    <button id="goto_remove_book">Remover livros</button>
-    <button id="goto_loan">Emprestar livros</button>
-    <button id="goto_devolution">Devolução de livros</button>
-    <button id="goto_book_list">Listagem de livros</button>
+    <button class="non-border" id="goto_add_book">Adicionar livros</button>
+    <button class="non-border" id="goto_remove_book">Remover livros</button>
+    <button class="non-border" id="goto_loan">Emprestar livros</button>
+    <button class="non-border" id="goto_devolution">Devolução de livros</button>
+    <button class="non-border" id="goto_book_list">Listagem de livros</button>
+  </div>
+  <div class="theme-bar row">
+      <button class="theme-button" id="theme-change" value="white">Tema claro</button>
   </div>
 </body>
 </html>
