Criando espaço para a tabela

--- a/pages/devolution.html
+++ b/pages/devolution.html
@@ -37,5 +37,24 @@
           <button id="devolution">Devolver</button>
           <button id="goto_home">Voltar</button>
         </div>
+        <table>
+          <thead>
+              <tr>
+                <th>Nome do livro</th>
+                <th>Registro do livro</th>
+                <th>Autor do livro</th>
+                <th>status</th>
+                <th>Aluno</th>
+                <th>Turma do aluno</th>
+                <th>Turno do aluno</th>
+                <th>Turno do emprestimo</th>
+                <th>Data de emprestimo</th>
+                <th>Data de devolução</th>
+                <th> </th>
+              </tr>
+          </thead>
+          <tbody id='table-body'>
+          </tbody>
+      </table>
 </body>
 </html>
