Implmentando adição de livros

--- a/pages/add_book.html
+++ b/pages/add_book.html
@@ -16,23 +16,19 @@
       <div class="row">
         <div class="column">
           <p>Nome do livro</p>
-          <input type="text" name="" id="">
+          <input type="text" id="bookName">
         </div>
         <div class="column">
           <p>Registro do livro</p>
-          <input type="text" name="" id="">
+          <input type="text" id="bookRegister">
         </div>
         <div class="column">
           <p>Autor do livro</p>
-          <input type="text" name="" id="">
-        </div>
-        <div class="column">
-          <p>Data de adição</p>
-          <input type="date">
+          <input type="text" id="bookAuthor">
         </div>
       </div>
       <div class="row">
-        <button>Adicionar</button>
+        <button id="addBook">Adicionar</button>
         <button id="goto_home">Voltar</button>
       </div>
     </div>
