consertando a remoção de livros

--- a/pages/remove_book.html
+++ b/pages/remove_book.html
@@ -13,45 +13,10 @@
       <h1>Remover livros</h1>
     </nav>
     <div class="conteiner">
-      <div class="two-factor" style="display: none;">
-        <h1 id="two-factor-h1">Tem certeza?</h1>
-        <p>Certifique se de que deseja remover o livro:</p>
-        <div class="row book-display">
-            <p>Nome do livro</p>
-            <p>Registro do livro</p>
-            <p>Autor do livro</p>
-            <p>Data de adição</p>
-        </div>
-        <div class="row">
-          <button>Remover</button>
-          <button>Voltar</button>
-        </div>
-      </div>
-      <div class="column">
-        <p>Escolha um livro para remover :</p><br>
-        <div class="row book-display">
-          <p>Nome do livro</p>
-          <p>Registro do livro</p>
-          <p>Autor do livro</p>
-          <p>Data de adição</p>
-          <button>remover</button>
-        </div>
-        <div class="row book-display">
-          <p>Nome do livro</p>
-          <p>Registro do livro</p>
-          <p>Autor do livro</p>
-          <p>Data de adição</p>
-          <button>remover</button>
-        </div>
-        <div class="row book-display">
-          <p>Nome do livro</p>
-          <p>Registro do livro</p>
-          <p>Autor do livro</p>
-          <p>Data de adição</p>
-          <button>remover</button>
-        </div>
-      </div>
+      <p>Remover livro por registro</p>
+      <input style="width: fit-content;" id="RegisterInput" type="text" placeholder="Insira o registro do livro">
       <div class="row">
+        <button id="RemoveBook">Remover</button>
         <button id="goto_home">Voltar</button>
       </div>
     </div>
