--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h1>Biblioteca digital</h1>
   </nav>
   <div class="conteiner">
-    <button class="non-border" id="goto_add_book">Adicionar livros</button>
-    <button class="non-border" id="goto_remove_book">Remover livros</button>
-    <button class="non-border" id="goto_loan">Emprestar livros</button>
-    <button class="non-border" id="goto_devolution">Devolução de livros</button>
-    <button class="non-border" id="goto_book_list">Listagem de livros</button>
+    <button id="goto_add_book">Adicionar livros</button>
+    <button id="goto_remove_book">Remover livros</button>
+    <button id="goto_loan">Emprestar livros</button>
+    <button id="goto_devolution">Devolução de livros</button>
+    <button id="goto_book_list">Listagem de livros</button>
   </div>
 </body>
 </html>
